docs/compilation/v1.9.5/_sources/index.rst.txt
Welcome to **sinergym**!
========================

.. include:: pages/introduction.rst

############
Contributing
############

To any interested in making Sinergym better, there are still some improvements that need to be done. You can check `issues <https://github.com/ugr-sail/sinergym/issues>`__ in the repo.

If you want to contribute, please read `CONTRIBUTING.md <https://github.com/ugr-sail/sinergym/blob/main/CONTRIBUTING.md>`__ first.

############
Examples
############

The examples can be run if you have your computer or container properly configured (see :ref:`Installation` section) from our notebooks hosted in the `examples <https://github.com/ugr-sail/sinergym/tree/main/examples>`__ folder of the official Sinergym repository.

.. toctree::
   :maxdepth: 2
   :hidden:
   :caption: Start Here

   pages/installation.rst
   pages/usage-example.rst


.. toctree::
   :maxdepth: 2
   :hidden:
   :caption: sinergym

   pages/environments.rst
   pages/rewards.rst
   pages/controllers.rst
   pages/wrappers.rst
   pages/extra-configuration.rst
   pages/output.rst
   pages/deep-reinforcement-learning.rst
   pages/gcloudAPI.rst
   pages/github-actions.rst
   pages/tests.rst
   pages/API-reference.rst


.. toctree::
   :maxdepth: 2
   :hidden:
   :caption: Examples

   pages/notebooks/basic_example.nblink
   pages/notebooks/change_environment.nblink
   pages/notebooks/wrappers_examples.nblink
   pages/notebooks/personalize_loggerwrapper.nblink
   pages/notebooks/rule_controller_example.nblink
   pages/notebooks/drl.nblink
   pages/notebooks/MLflow_example.nblink
   pages/notebooks/TensorBoard_example.nblink
   